--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -70,6 +70,14 @@ a {
 
 }
 
+.student-question{
+	margin-top: 30px;
+}
+
+.student-responses{
+	margin-top: 30px;
+}
+
 // This is for the buttons and time left lecture side 
 .theme-response-actions {
 	margin-top: 30px;
