--- a/css/scss/partials/_canvas.scss
+++ b/css/scss/partials/_canvas.scss
@@ -17,15 +17,14 @@
 	img {
 		height: 30px;
 		margin-top: 22px;
-		margin-left: 30px;
+		margin-left: 45%;
 
 	}
 
 	.icon-select {
 		display: inline-block;
-		margin-left: calc(100vw / 12);
 		height: 70px;
-		width: 90px;
+		width: 16%;
 	}
 
 	.selected {
