--- a/css/scss/partials/_list.scss
+++ b/css/scss/partials/_list.scss
@@ -55,6 +55,12 @@
 	}
 }
 
+#addbutton{
+	width:50%;
+	margin: auto;
+	text-align:center;
+}
+
 .list-questions-green {
 	width: 80%;
 	margin: auto;
