--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -88,3 +88,15 @@ a {
 
 	}
 }
+
+.subject-form{
+	padding-top:12px;
+	padding-bottom:12px;
+    width: 100%;
+    background-color: $uq-purple;
+    color: white;
+    font-weight: 600;
+    font-size: 20px;
+    border-radius: 15px;
+    cursor: pointer;
+}
