--- a/css/scss/partials/_images.scss
+++ b/css/scss/partials/_images.scss
@@ -29,7 +29,10 @@
 //styles for lightbox
 /* Preload images */
 body:after {
-  content: url(../assets/images/lightbox-close.png) url(../assets/images/lightbox-loading.gif) url(../assets/images/lightbox-prev.png) url(../assets/images/lightbox-next.png);
+  content: url(../assets/images/lightbox-close.png) 
+  url(../assets/images/lightbox-loading.gif) 
+  url(../assets/images/lightbox-prev.png) 
+  url(../assets/images/lightbox-next.png);
   display: none;
 }
 
