--- a/css/scss/partials/_canvas.scss
+++ b/css/scss/partials/_canvas.scss
@@ -14,25 +14,37 @@
 	bottom: 0;
 	width: 100%;
 
+	.center {
+		position: relative;
+    	margin: auto;
+    	z-index: 10;
+    	width: 400px;
+	}
+
+
 	img {
 		height: 30px;
 		margin-top: 22px;
-		margin-left: 45%;
+		margin-left: 10px;
+	}
 
+	.size {
+		padding-left: 15px;
 	}
 
 	.icon-select {
 		display: inline-block;
 		height: 70px;
-		width: 16%;
+		width: 13%;
 	}
 
 	.selected {
-		background: white;
+		background: darken($uq-purple, 20%);
 	}
 
 	
 }
+
 
 
 
