Dodgy time animation

--- a/css/scss/partials/_buttons.scss
+++ b/css/scss/partials/_buttons.scss
@@ -30,7 +30,7 @@
 }
 
 // Add a subject as a lectruer
-.button-add-subject {
+.button-add {
     @extend .remove-button-style;
     width: 100%;
     border: 2px solid $uq-purple;
