--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -58,24 +58,20 @@ a {
 
 	margin-left:auto;
 	margin-right:auto;
-	z-index:-1;
 }
 
 .theme-timer {
-	margin-left: auto;
-	margin-right:auto;
 	border: 5px solid $uq-purple;
 	background:$uq-purple;
 	border-radius: 50%;
 	margin-top: 30px;
 	-webkit-animation: size 180s infinite linear;
 	animation: size 180s infinite linear;
-	z-index:-1;
 	
 }
 @keyframes size{
-	from {height: 300px; width:300px; margin-top:10px; margin-bottom:10px;}
-	to {height: 0px; width: 0px; Margin-top:160px; margin-bottom:160px;}
+	from {height: 300px; width:300px; margin-top:10px; margin-bottom:10px;	margin-left: 38.7%;}
+	to {height: 0px; width: 0px; Margin-top:160px; margin-bottom:160px;	margin-left: 50%;}
 }
 
 .theme-time3 {
