--- a/css/main.css
+++ b/css/main.css
@@ -353,9 +353,10 @@ table {
   text-shadow: 0px 1px 0px #528009;
   width: 220px;
   margin-right: 20px;
+  outline: none;
 }
 
-/* line 231, scss/partials/_buttons.scss */
+/* line 232, scss/partials/_buttons.scss */
 .button-correct:hover {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
   background: -moz-linear-gradient(top, #77a809 5%, #89c403 100%);
@@ -367,13 +368,13 @@ table {
   background-color: #77a809;
 }
 
-/* line 241, scss/partials/_buttons.scss */
+/* line 242, scss/partials/_buttons.scss */
 .button-correct:active {
   position: relative;
   top: 1px;
 }
 
-/* line 247, scss/partials/_buttons.scss */
+/* line 248, scss/partials/_buttons.scss */
 .button-incorrect {
   -moz-box-shadow: inset 0px 1px 0px 0px #f5978e;
   -webkit-box-shadow: inset 0px 1px 0px 0px #f5978e;
@@ -401,9 +402,10 @@ table {
   text-shadow: 0px 1px 0px #810e05;
   width: 220px;
   margin-left: 20px;
+  outline: none;
 }
 
-/* line 275, scss/partials/_buttons.scss */
+/* line 277, scss/partials/_buttons.scss */
 .button-incorrect:hover {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
   background: -moz-linear-gradient(top, #c62d1f 5%, #f24537 100%);
@@ -415,7 +417,7 @@ table {
   background-color: #c62d1f;
 }
 
-/* line 285, scss/partials/_buttons.scss */
+/* line 287, scss/partials/_buttons.scss */
 .button-incorrect:active {
   position: relative;
   top: 1px;
