--- a/css/scss/partials/_buttons.scss
+++ b/css/scss/partials/_buttons.scss
@@ -227,6 +227,7 @@
     text-shadow:0px 1px 0px #528009;
     width: 220px;
     margin-right: 20px;
+    outline: none;
 }
 .button-correct:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #77a809), color-stop(1, #89c403));
@@ -271,6 +272,7 @@
     text-shadow:0px 1px 0px #810e05;
     width: 220px;
     margin-left: 20px;
+    outline: none;
 }
 .button-incorrect:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #c62d1f), color-stop(1, #f24537));
