--- a/css/main.css
+++ b/css/main.css
@@ -1059,42 +1059,60 @@ body {
 
 /* line 57, scss/partials/_theme.scss */
 .timer-div {
+  height: 400px;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 
-/* line 63, scss/partials/_theme.scss */
+/* line 64, scss/partials/_theme.scss */
 .theme-timer {
   border: 5px solid #3D3092;
   background: #3D3092;
   border-radius: 50%;
-  margin-top: 30px;
-  -webkit-animation: size 180s infinite linear;
-  animation: size 180s infinite linear;
+  -webkit-animation: size 120s linear;
+  animation: size 120s linear;
+  position: absolute;
+  top: 140px;
+  left: 50%;
 }
 
 @keyframes size {
-  from {
-    height: 300px;
-    width: 300px;
-    margin-top: 10px;
+  0% {
+    height: 400px;
+    width: 400px;
     margin-bottom: 10px;
-    margin-left: 38.7%;
+    margin-top: 0px;
+    margin-left: -200px;
+    background: #16BF25;
+    border-color: #16BF25;
   }
-  to {
+  50% {
+    background: #FFC842;
+    border-color: #FFC842;
+  }
+  75% {
+    background: #D6492A;
+    border-color: #D6492A;
+  }
+  100% {
     height: 0px;
     width: 0px;
-    Margin-top: 160px;
     margin-bottom: 160px;
-    margin-left: 50%;
+    margin-top: 200px;
+    margin-left: 0px;
+    background: #AA0041;
+    border-color: #AA0041;
   }
 }
-/* line 77, scss/partials/_theme.scss */
-.theme-time3 {
-  width: 300px;
-  height: 300px;
+/* line 81, scss/partials/_theme.scss */
+.theme-time2 {
+  width: 400px;
+  height: 400px;
   color: white;
-  margin-left: 38.7%;
+  font-weight: bold;
+  left: 50%;
+  margin-left: -200px;
   margin-right: auto;
   border: 5px solid white;
   border-radius: 50%;
@@ -1102,35 +1120,19 @@ body {
   top: 140px;
   text-align: center;
 }
-/* line 88, scss/partials/_theme.scss */
-.theme-time3 p {
-  margin-top: 10px;
+/* line 94, scss/partials/_theme.scss */
+.theme-time2 p {
+  margin-top: 20px;
 }
 
-/* line 93, scss/partials/_theme.scss */
-.theme-time2 {
+/* line 99, scss/partials/_theme.scss */
+.theme-time1 {
   width: 200px;
   height: 200px;
   color: white;
-  margin-left: 42.3%;
-  margin-right: auto;
-  border: 5px solid  white;
-  border-radius: 50%;
-  position: absolute;
-  top: 190px;
-  text-align: center;
-}
-/* line 104, scss/partials/_theme.scss */
-.theme-time2 p {
-  margin-top: 10px;
-}
-
-/* line 109, scss/partials/_theme.scss */
-.theme-time1 {
-  width: 100px;
-  height: 100px;
-  color: white;
-  margin-left: 46%;
+  font-weight: bold;
+  left: 50%;
+  margin-left: -100px;
   margin-right: auto;
   border: 5px solid  white;
   border-radius: 50%;
@@ -1138,39 +1140,77 @@ body {
   top: 240px;
   text-align: center;
 }
-/* line 120, scss/partials/_theme.scss */
+/* line 112, scss/partials/_theme.scss */
 .theme-time1 p {
-  margin-top: 25px;
+  margin-top: 20px;
 }
 
-/* line 125, scss/partials/_theme.scss */
+/* line 117, scss/partials/_theme.scss */
+.theme-time15 {
+  width: 300px;
+  height: 300px;
+  color: white;
+  left: 50%;
+  margin-left: -150px;
+  margin-right: auto;
+  border: 5px solid white;
+  border-radius: 50%;
+  position: absolute;
+  top: 190px;
+  text-align: center;
+}
+/* line 129, scss/partials/_theme.scss */
+.theme-time15 p {
+  margin-top: 20px;
+}
+
+/* line 134, scss/partials/_theme.scss */
+.theme-time05 {
+  width: 100px;
+  height: 100px;
+  color: white;
+  left: 50%;
+  margin-left: -50px;
+  margin-right: auto;
+  border: 5px solid  white;
+  border-radius: 50%;
+  position: absolute;
+  top: 290px;
+  text-align: center;
+}
+/* line 146, scss/partials/_theme.scss */
+.theme-time05 p {
+  margin-top: 40px;
+}
+
+/* line 151, scss/partials/_theme.scss */
 .theme-response-inner {
   width: 30%;
   height: 50px;
   background: #16BF25;
 }
 
-/* line 132, scss/partials/_theme.scss */
+/* line 158, scss/partials/_theme.scss */
 .student-question {
   margin-top: 30px;
 }
 
-/* line 136, scss/partials/_theme.scss */
+/* line 162, scss/partials/_theme.scss */
 .student-responses {
   margin-top: 30px;
 }
 
-/* line 141, scss/partials/_theme.scss */
+/* line 167, scss/partials/_theme.scss */
 .theme-response-actions {
   margin-top: 30px;
   text-align: center;
 }
-/* line 145, scss/partials/_theme.scss */
+/* line 171, scss/partials/_theme.scss */
 .theme-response-actions h2 {
   font-size: 30px;
 }
 
-/* line 151, scss/partials/_theme.scss */
+/* line 177, scss/partials/_theme.scss */
 .subject-form {
   padding-top: 12px;
   padding-bottom: 12px;
